#  Copyright (C) 2023 XuanYang-cn. All rights reserved.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[build-system]
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "etcd-sdk-python"
authors = [
  { name="XuanYang-cn", email="jumpthepig@gmail.com" },
]
description = "Python client for the etcd v3 API for python >= 3.7"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies    = [
    "grpcio>=1.49.1,<=1.58.0",
]

dynamic = ["version"]

[tool.setuptools_scm]
'local_scheme'= 'no-local-version'
'version_scheme'= 'no-guess-dev'

[project.urls]
"Homepage"          = "https://github.com/XuanYang-cn/pyetcd"
"Docs: User Guide"  = "https://pyetcd-docs.readthedocs.io/en/latest/"
"Source Code"       = "https://github.com/XuanYang-cn/pyetcd"
